// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Component should render component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="content"
        style="background-image: url(https://rickandmortyapi.com/api/character/avatar/361.jpeg);"
      >
        <section>
          <img
            alt="image Toxic Rick"
            src="https://rickandmortyapi.com/api/character/avatar/361.jpeg"
          />
          <h2>
            Toxic Rick
          </h2>
          <ul>
            <li>
              Type 
              Rick's Toxic Side
            </li>
            <li>
              Species 
              Humanoid
            </li>
            <li>
              Gender 
              Male
            </li>
            <li>
              Status 
              Dead
            </li>
          </ul>
          <span>
            Link
          </span>
        </section>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="content"
      style="background-image: url(https://rickandmortyapi.com/api/character/avatar/361.jpeg);"
    >
      <section>
        <img
          alt="image Toxic Rick"
          src="https://rickandmortyapi.com/api/character/avatar/361.jpeg"
        />
        <h2>
          Toxic Rick
        </h2>
        <ul>
          <li>
            Type 
            Rick's Toxic Side
          </li>
          <li>
            Species 
            Humanoid
          </li>
          <li>
            Gender 
            Male
          </li>
          <li>
            Status 
            Dead
          </li>
        </ul>
        <span>
          Link
        </span>
      </section>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Profile Component should render skeleton when character no exist 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="content"
      >
        <section>
          <div
            class="img"
          />
          <div
            class="h2"
          />
          <div
            class="ul"
          >
            <div
              class="li"
            />
            <div
              class="li"
            />
            <div
              class="li"
            />
            <div
              class="li"
            />
          </div>
          <span>
            Link
          </span>
        </section>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="content"
    >
      <section>
        <div
          class="img"
        />
        <div
          class="h2"
        />
        <div
          class="ul"
        >
          <div
            class="li"
          />
          <div
            class="li"
          />
          <div
            class="li"
          />
          <div
            class="li"
          />
        </div>
        <span>
          Link
        </span>
      </section>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
